--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -15,6 +15,11 @@ body {
   padding: 45px 50px;
   border-radius: 50px;
   position: relative;
+  transition: background 0.2s;
+}
+
+.keyboard.has-error{
+  background:palevioletred;
 }
 
 h1 {
